<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_zenoh_common_cpp</name>
  <version>0.0.0</version>
  <description>Implement the ROS middleware interface using Eclipse Zenoh</description>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>
  <author>Geoffrey Biggs</author>
  <author>Brandon Ong</author>
  <author>Morgan Quigley</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosidl_typesupport_zenoh_c</depend>
  <depend>rosidl_typesupport_zenoh_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
