<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_zenoh_cpp</name>
  <version>0.0.0</version>
  <description>Implement the ROS middleware interface using Eclipse Zenoh</description>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>
  <maintainer email="morgon@openrobotics.org">Morgan Quigly</maintainer>
  <license>Apache License 2.0</license>
  <author>Geoffrey Biggs</author>
  <author>Brandon Ong</author>
  <author>Morgan Quigly</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>

  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>test_msgs</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
