<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenoh_c_vendor</name>
  <version>0.0.1</version>
  <description>Vendor pkg to install zenoh-c</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <!-- <build_depend>cargo</build_depend> -->
  <build_depend>clang</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
